[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "svReg"
authors = [{name = "Yannick Stoll, Elidjah Maugalem", email = "yannick@pixelforest.io"}]
readme = "README.md"
dynamic = ["version", "description"]


[tool.pytest.ini_options]
filterwarnings = [
# Ignoring DeprecationWarning for now...
    "ignore::DeprecationWarning"
]